<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.masterclass.MainActivity">

    <TextView
        android:id="@+id/show_label_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_label_msg" />

    <TextView
        android:id="@+id/show_label_hint"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/show_label_hint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_num"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/show_attempts"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/show_attempts"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_guess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guess" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="restart"
        android:text="@string/btn_restart" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_hint" />

</android.widget.LinearLayout>